--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ekuber.performance</groupId>
   <artifactId>com.ekuber.performance</artifactId>
@@ -18,7 +20,6 @@
 	    <artifactId>selenium-firefox-driver</artifactId>
 	    <version>2.53.0</version>
 	</dependency>
-    
     
 	 <dependency>
 	   <groupId>com.codeborne</groupId>
